# capnp-serde

./: Cargo.toml  README.md  build.rs
examples/: basic.rs  complex.rs  nested.rs  transcode.rs  unions.rs
examples-capnp/: example.capnp
src/: converter.rs  deserialize.rs  lib.rs  serialize.rs  types.rs
src/types/: bools.rs  data.rs  enums.rs  list_element.rs  num.rs  seq.rs  structs.rs  text.rs  void.rs
