[package]
name = "capnp-serde"
version = "0.1.0"
edition = "2024"

[features]
default = []
examples = []

[dependencies]
capnp = "0.21.0"
once_map = "0.4.21"
serde = "1.0.219"
serde_bytes = "0.11.17"
tracing = "0.1.41"

[build-dependencies]
capnpc = "0.21.0"

[dev-dependencies]
ciborium = "0.2.2"
serde_json = "1.0.140"
serde_yml = "0.0.12"
tracing-subscriber = "0.3.19"
